add new website from server na

--- a/xem-phim-moi/tram-truong/index.html
+++ b/xem-phim-moi/tram-truong/index.html
@@ -1187,7 +1187,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             3
+             4
             </dd>
             <br/>
            </dl>
@@ -1777,18 +1777,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/vincenzo" title="Vincenzo">
+          <a class="list-top-movie-link" href="/phim-moi/bo-ba-trom-cap-phan-10" title="Bộ ba trộm cắp (Phần 10)">
            <span class="status">
-            HD Vietsub + Thuyết Minh
+            HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/vincenzo-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bo-ba-trom-cap-phan-10-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Vincenzo
+             Bộ ba trộm cắp (Phần 10)
             </span>
             <span class="list-top-movie-item-en">
-             Vincenzo
+             Trailer Park Boys (Season 10)
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1799,18 +1799,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nhan-ban-vo-tinh" title="Nhân Bản Vô Tính">
+          <a class="list-top-movie-link" href="/phim-moi/nha-dieu-tra-sieu-linh" title="Nhà điều tra siêu linh">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nhan-ban-vo-tinh-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nha-dieu-tra-sieu-linh-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Nhân Bản Vô Tính
+             Nhà điều tra siêu linh
             </span>
             <span class="list-top-movie-item-en">
-             Replicas
+             Paranormal
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1821,21 +1821,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/chim-moi" title="Chim Mồi">
+          <a class="list-top-movie-link" href="/phim-moi/oshin" title="Oshin">
            <span class="status">
-            FHD Vietsub
+            HD Thuyết Minh
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chim-moi-phan-1-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/oshin-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Chim Mồi
+             Oshin
             </span>
             <span class="list-top-movie-item-en">
-             Decoy
+             Oshin
             </span>
             <span class="list-top-movie-item-view">
-             5 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1843,18 +1843,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tuyet-son-phi-ho-kho-bau-phuong-bac" title="Tuyết Sơn Phi Hồ: Kho Báu Phương Bắc">
+          <a class="list-top-movie-link" href="/phim-moi/nui-lua-dante" title="Núi lửa Dante">
            <span class="status">
-            HD Vietsub
+            Vietsub - HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tuyet-son-phi-ho-kho-bau-phuong-bac-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nui-lua-dante-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Tuyết Sơn Phi Hồ: Kho Báu Phương Bắc
+             Núi lửa Dante
             </span>
             <span class="list-top-movie-item-en">
-             The Hidden Fox
+             Dante Peak
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1865,21 +1865,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/what-lies-below" title="What Lies Below">
+          <a class="list-top-movie-link" href="/phim-moi/xac-song-chuyen-chua-ke" title="Xác Sống Chuyện Chưa Kể">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/what-lies-below-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tales-of-the-walking-dead-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             What Lies Below
+             Xác Sống Chuyện Chưa Kể
             </span>
             <span class="list-top-movie-item-en">
-             What Lies Below
+             Tales of the Walking Dead
             </span>
             <span class="list-top-movie-item-view">
-             3 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
