add new website from server na

--- a/xem-phim-moi/xu-so-than-tien/index.html
+++ b/xem-phim-moi/xu-so-than-tien/index.html
@@ -1186,7 +1186,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             3
+             4
             </dd>
             <br/>
            </dl>
@@ -1699,18 +1699,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nhung-nguoi-ban-phan-8" title="Những Người Bạn (phần 8)">
+          <a class="list-top-movie-link" href="/phim-moi/thap-dien-mai-phuc" title="Thập Diện Mai Phục">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nhung-nguoi-ban-phan-8-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thap-dien-mai-phuc-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Những Người Bạn (phần 8)
+             Thập Diện Mai Phục
             </span>
             <span class="list-top-movie-item-en">
-             Friends (Season 8)
+             House of Flying Daggers
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1721,18 +1721,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/everybody-in-the-house" title="Everybody In the House">
+          <a class="list-top-movie-link" href="/phim-moi/hai-kich-gia" title="Hài kịch gia">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/everybody-in-the-house-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hai-kich-gia-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Everybody In the House
+             Hài kịch gia
             </span>
             <span class="list-top-movie-item-en">
-             Everybody In the House
+             This Is Not a Comedy
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/nhung-nguoi-doc-ma" title="Những Người Đọc Mã">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nhung-nguoi-doc-ma-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Những Người Đọc Mã
+            </span>
+            <span class="list-top-movie-item-en">
+             Windtalkers
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1743,18 +1765,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/luat-phap-va-trat-tu-nan-nhan-dac-biet-phan-23" title="Luật Pháp Và Trật Tự: Nạn Nhân Đặc Biệt (Phần 23)">
+          <a class="list-top-movie-link" href="/phim-moi/nhap-vai" title="Nhập Vai">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/luat-phap-va-trat-tu-nan-nhan-dac-biet-phan-23-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nhap-vai-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Luật Pháp Và Trật Tự: Nạn Nhân Đặc Biệt (Phần 23)
+             Nhập Vai
             </span>
             <span class="list-top-movie-item-en">
-             Law &amp; Order: Special Victims Unit (Season 23)
+             Role Play
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1765,43 +1787,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nguoi-tinh-cua-jinx" title="Người Tình Của Jinx">
+          <a class="list-top-movie-link" href="/phim-moi/su-quyen-ru-cua-nguoi-tu-san" title="Sự Quyến Rũ Của Người Tư Sản">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nguoi-tinh-cua-jinx-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/su-quyen-ru-cua-nguoi-tu-san-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Người Tình Của Jinx
+             Sự Quyến Rũ Của Người Tư Sản
             </span>
             <span class="list-top-movie-item-en">
-             Jinxed at First
+             Le Charme discret de la bourgeoisie
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nhu-the-da-du-den-chua" title="Như thế đã đủ đen chưa?!?">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nhu-the-da-du-den-chua-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Như thế đã đủ đen chưa?!?
-            </span>
-            <span class="list-top-movie-item-en">
-             Is That Black Enough for You?!?
-            </span>
-            <span class="list-top-movie-item-view">
-             1 lượt xem
+             4 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
