add new website from server na

--- a/xem-phim-moi/tuong-tuong/index.html
+++ b/xem-phim-moi/tuong-tuong/index.html
@@ -1195,7 +1195,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             3
+             4
             </dd>
             <br/>
            </dl>
@@ -1785,18 +1785,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/gai-hu" title="Gái Hư">
+          <a class="list-top-movie-link" href="/phim-moi/cau-chuyen-toi-pham-thanh-tra-an-do" title="Câu chuyện tội phạm: Thanh tra Ấn Độ">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/gai-hu-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cau-chuyen-toi-pham-thanh-tra-an-do-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Gái Hư
+             Câu chuyện tội phạm: Thanh tra Ấn Độ
             </span>
             <span class="list-top-movie-item-en">
-             Call Me Bad Girl
+             Crime Stories: India Detectives
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1807,18 +1807,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/pit-babe-the-series" title="Pit Babe The Series">
+          <a class="list-top-movie-link" href="/phim-moi/song-bac-2" title="Sòng Bạc">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/pit-babe-the-series-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/song-bac-1995-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Pit Babe The Series
+             Sòng Bạc
             </span>
             <span class="list-top-movie-item-en">
-             Pit Babe The Series
+             Casino
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/bo-toc-an-thit-nguoi" title="Bộ Tộc Ăn Thịt Người">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bo-toc-an-thit-nguoi-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Bộ Tộc Ăn Thịt Người
+            </span>
+            <span class="list-top-movie-item-en">
+             Cannibal Holocaust
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1829,18 +1851,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/sophie-scholl-the-final-days" title="Sophie Scholl: The Final Days">
+          <a class="list-top-movie-link" href="/phim-moi/tro-choi" title="Trò chơi">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/sophie-scholl-the-final-days-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tro-choi-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Sophie Scholl: The Final Days
+             Trò chơi
             </span>
             <span class="list-top-movie-item-en">
-             Sophie Scholl: The Final Days
+             The Game
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1851,40 +1873,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/bong-ma-trong-nha-hat" title="Bóng Ma Trong Nhà Hát">
+          <a class="list-top-movie-link" href="/phim-moi/under-the-open-sky" title="Under The Open Sky">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bong-ma-trong-nha-hat-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/under-the-open-sky-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Bóng Ma Trong Nhà Hát
+             Under The Open Sky
             </span>
             <span class="list-top-movie-item-en">
-             Phantom of the Opera
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/manh-the-thuc-than-mua-2" title="Manh Thê Thực Thần – Mùa 2">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/manh-the-thuc-than-mua-2-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Manh Thê Thực Thần – Mùa 2
-            </span>
-            <span class="list-top-movie-item-en">
-             Cinderella Chef S2, Meng Qi Shi Shen S2
+             Under The Open Sky
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
